--- a/emulation-save-file-share/.gitignore
+++ b/emulation-save-file-share/.gitignore
@@ -1,24 +1,45 @@
-# Logs
-logs
-*.log
+# ======================
+# Node / Vite / Electron
+# ======================
+node_modules/
+dist/
+build/
+out/
+release/
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# env files (SECRETS)
+.env
+.env.*
+!.env.example
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS junk
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# editor
+.vscode/
+.idea/
+
+# electron build artifacts
+*.exe
+*.dmg
+*.AppImage
+
+# temp zips from save manager
+tmp/
+*.zip
+
+# firebase local emulators (if ever used)
+.firebase/
+firebase-debug.log
+
+# RPCS3 paths you might accidentally paste
+*rpcs3*
+*dev_hdd0*
+*savestates*
