--- a/emulation-save-file-share/package.json
+++ b/emulation-save-file-share/package.json
@@ -3,14 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "electron/main.js",
+  "main": "electron/main.cjs",
   "scripts": {
     "dev": "vite",
     "electron:dev": "set ELECTRON_START_URL=http://localhost:5173 && electron .",
     "build": "vite build",
     "electron:build": "npm run build && electron-builder",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:app": "concurrently -k \"npm run dev\" \"npm run electron:start\"",
+    "electron:start": "wait-on http://localhost:5173 && npm run electron:dev"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
@@ -28,10 +30,12 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "wait-on": "^9.0.3"
   }
 }
