--- a/emulation-save-file-share/package.json
+++ b/emulation-save-file-share/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "electron": "^40.1.0",
     "electron-builder": "^26.7.0",
