--- a/emulation-save-file-share/package.json
+++ b/emulation-save-file-share/package.json
@@ -1,7 +1,7 @@
 {
   "name": "emulation-save-file-share",
   "private": true,
-  "version": "0.0.10",
+  "version": "0.0.11",
   "type": "module",
   "main": "electron/main.cjs",
   "build": {
@@ -38,7 +38,7 @@
     "electron:dev": "set ELECTRON_START_URL=http://localhost:5173 && electron .",
     "build": "vite build",
     "electron:build": "npm run build && electron-builder",
-    "release": "npm run bump && git add package.json && git commit -m \"release\" && git push && npm run build && electron-builder --publish always",
+    "release": "node scripts/release.mjs",
     "lint": "eslint .",
     "preview": "vite preview",
     "dev:app": "concurrently -k \"npm run dev\" \"npm run electron:start\"",
